homework2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-homework-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: msa-homework-service
                port:
                  number: 8000
            path: /
